<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary_blue"
            app:navigationIcon="@android:drawable/ic_menu_revert">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ueplogo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="ADMISSION FORM"
                android:textColor="@color/primary_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="Fill out admission form"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="italic" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FirstName"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/edit_text"
                        android:inputType="textPersonName"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/MiddleName"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etMiddleName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/edit_text"
                        android:inputType="textPersonName"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/LastName"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/edit_text"
                        android:inputType="textPersonName"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/DOB"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etBirthDate"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/edit_text"
                        android:inputType="date"
                        android:maxLength="10"
                        android:hint="01/01/2026"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/POB"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etPlaceBirth"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/edit_text"
                        android:hint="e.g. Catarman, Balite"
                        android:inputType="text"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/Gender"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>

                    <RadioGroup
                        android:id="@+id/radioGroupGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:drawable/edit_text"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <RadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                        <RadioButton
                            android:id="@+id/rbFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="Female"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/HomeAddress"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etHomeAddress"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/edit_text"
                        android:inputType="textPostalAddress"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/Email"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/edit_text"
                        android:hint="example@gmail.com"
                        android:inputType="textEmailAddress"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="School last attended:"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etSchool"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/edit_text"
                        android:inputType="text"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Year graduated:"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etYearGraduated"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/edit_text"
                        android:inputType="number"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/btnClearAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp"
                        android:text="Clear all"
                        android:textColor="@color/red"
                        android:textSize="10sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnNextAdmission"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/primary_blue"
                        android:text="Next"
                        android:textAllCaps="false"
                        app:cornerRadius="20dp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
